correction anomalie filtre, mise à jour tests audio video et contraste couleurs

--- a/web/theme/default/css/reco-custom.css
+++ b/web/theme/default/css/reco-custom.css
@@ -67,13 +67,12 @@
 #refTests h3::before, #refTests h4::before, #refTests h5::before, #refTests h6::before {content:none;}
 #refTests h2{margin:4rem 0 2rem 0;}
 #refTests h2:first-child{margin:2rem 0 2rem 0;}
-
 #refTests h3{font-size: 1rem; margin:0.2rem 0;}
 #refTests .card-header{position: relative; background-color: #fff; border-bottom: 1px solid #ccc; padding: 0 0;}
 #refTests ol {list-style-type: decimal;}
 #refTests ul, #refTests ol {padding-left: 1rem;}
 #refTests ol ul{padding-top: 1rem;}
-
+#refTests a{text-decoration: underline;}
 
 
 #filter h3{margin:0.2rem 0;}
